# filtered-mic-poc

./: .viam-gen-info  README.md  client_requirements.txt  free_requirements.txt  meta.json  requirements.txt  simple_client.py
cpp/: CMakeLists.txt  README.md  conanfile.py  main.cpp  meta.json  voice_trigger_mic.cpp  voice_trigger_mic.hpp
src/: main.py
src/models/: __init__.py  trigger.py  viamaudiosource.py
